Version 1.0.1-devel
-------------------


Version 1.0.0 [27 May 16]
-------------------------
- Initial public release.