@@ -784,7 +784,8 @@ Class output_format
    public:
     virtual ~output_format() {}
 
-    virtual void write_sentence(const sentence& s, ostream& os) const = 0;
+    virtual void write_sentence(const sentence& s, ostream& os) = 0;
+    virtual void finish_document(ostream& os) {};
 
     // Static factory methods
     static output_format* new_output_format(const string& name);
@@ -975,7 +976,8 @@ Main Classes
 
   class OutputFormat {
    public:
-    virtual string writeSentence(const Sentence& s) const;
+    virtual string writeSentence(const Sentence& s);
+    virtual string finishDocument();
 
     static OutputFormat* newOutputFormat(const string& name);
     static OutputFormat* newConlluOutputFormat();
